# glidesim

./: .gitignore  .pre-commit-config.yaml  Claude.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
scripts/: analyze_regime_distributions.py
scripts/tests/: test_analyze_regime_distributions.py
src/glidesim/: app.py  conftest.py
src/glidesim/analysis/: metrics.py  plots.py
src/glidesim/analysis/tests/: test_metrics.py  test_plots.py
src/glidesim/data/: market_params.yaml
src/glidesim/simulation/: engine.py  market_model.py
src/glidesim/simulation/tests/: test_engine.py  test_market_model.py
src/glidesim/strategies/: base.py  fixed.py  guardrails.py  inflation_adjusted.py  percent_of_portfolio.py  percent_of_portfolio_with_minimum.py
src/glidesim/strategies/tests/: test_fixed.py  test_guardrails.py  test_inflation_adjusted.py  test_percent_of_portfolio.py  test_percent_of_portfolio_with_minimum.py
src/glidesim/ui/: advanced_settings.py  registry.py  results.py  sidebar.py
src/glidesim/ui/tests/: test_results.py
