[project]
name = "glidesim"
version = "0.1.0"
description = "Monte Carlo simulator for testing drawdown strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "streamlit",
    "plotly",
    "pyyaml",
    "scipy",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glidesim"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["src/glidesim"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/ui/*",
    "*/app.py",
    "*/strategies/base.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]
